# social-stream-backend

./: .gitignore  project.code-workspace
auth-service/: go.mod  go.sum
auth-service/cmd/api/: main.go
auth-service/internal/application/: applicaiton_test.go  application.go  config.go
auth-service/internal/handler/: handler.go  handler_test.go
auth-service/internal/models/: input.go
auth-service/internal/router/: router.go
auth-service/internal/service/: service.go
media-compression-service/: Cargo.toml  Dockerfile
media-compression-service/src/: main.rs
media-compression-service/src/rabbitmq_client/: client.rs  models.rs
media-service/: Cargo.toml  Dockerfile
media-service/src/: main.rs
media-service/src/entity/: mod.rs  user_media.rs
media-service/src/handlers/: handlers.rs
media-service/src/jwt/: jwt.rs
media-service/src/migration/: m20220120_000001_create_post_table.rs  mod.rs
media-service/src/rabbitmq_client/: client.rs  models.rs
media-service/src/service/: mutation.rs  query.rs
post-service/: Dockerfile  go.mod  go.sum
post-service/cmd/api/: main.go
post-service/internal/application/: application.go
post-service/internal/handler/: handler.go
post-service/internal/messaging/: models.go
post-service/internal/models/: models.go
post-service/internal/router/: router.go
post-service/internal/service/: service.go
post-service/internal/sqlc/: query.sql  schema.sql  sqlc.yaml
project/: Makefile  docker-compose.yml
project/nginx/: nginx.conf
user-service/: Dockerfile  go.mod  go.sum
user-service/cmd/api/: main.go
(+15 files in other folders)
