[package]
name = "media-service"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "2.0.0"
aws-config = "1.5.7"
aws-sdk-s3 =  "1.52.0"
axum = { version = "0.7.7", features = ["multipart"] }
axum-extra = { version = "0.9.4", features = ["cookie", "typed-header"] }
chrono = "0.4.38"
fast_image_resize = { version = "5.0.0", features = ["image", "only_u8x4"] }
image = "0.25.2"
jsonwebtoken = "9.3.0"
mime = "0.3.17"
once_cell = "1.20.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.1", features = ["limit", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
turbojpeg = { version = "1.1.1", features = ["image"] }
uuid = { version = "1.10.0", features = ["v4"] }
